--- a/teste/src/application/Window.fxml
+++ b/teste/src/application/Window.fxml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Text?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Window">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.TelaController">
    <children>
-      <Button layoutX="274.0" layoutY="188.0" mnemonicParsing="false" text="Button" />
+      <Button layoutX="276.0" layoutY="282.0" mnemonicParsing="false" text="Entrar" />
+      <Button layoutX="528.0" layoutY="21.0" mnemonicParsing="false" onAction="#switchToWindow2" text="Admin" />
+      <TextField layoutX="226.0" layoutY="210.0" />
+      <TextField layoutX="226.0" layoutY="151.0" />
+      <Text layoutX="286.0" layoutY="132.0" strokeType="OUTSIDE" strokeWidth="0.0" text="CRM" wrappingWidth="27.3828125" />
+      <Text layoutX="281.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="SENHA" />
    </children>
 </AnchorPane>
