--- a/teste/src/application/login.fxml
+++ b/teste/src/application/login.fxml
@@ -25,16 +25,16 @@
                </font></Label>
             <AnchorPane layoutX="215.0" layoutY="251.0" prefHeight="201.0" prefWidth="410.0" style="-fx-background-color: E3E7E8; -fx-background-radius: 18;">
                <children>
-                  <PasswordField layoutX="43.0" layoutY="100.0" prefHeight="31.0" prefWidth="325.0" promptText="Senha">
+                  <PasswordField fx:id="senhalog" layoutX="43.0" layoutY="100.0" prefHeight="31.0" prefWidth="325.0" promptText="Senha">
                      <font>
                         <Font name="Century Gothic" size="15.0" />
                      </font></PasswordField>
-                  <Button layoutX="165.0" layoutY="149.0" mnemonicParsing="false" onAction="#switchToWindow3" prefHeight="30.0" prefWidth="80.0" style="-fx-background-color: #05275B; -fx-background-radius: 50;" text="Login" textAlignment="CENTER" textFill="WHITE">
+                  <Button layoutX="165.0" layoutY="149.0" mnemonicParsing="false" onAction="#signin" prefHeight="30.0" prefWidth="80.0" style="-fx-background-color: #05275B; -fx-background-radius: 50;" text="Login" textAlignment="CENTER" textFill="WHITE">
                      <font>
                         <Font name="Century Gothic Bold" size="12.0" />
                      </font>
                   </Button>
-                  <TextField id="Usuário/textfield" accessibleText="Usuário" layoutX="43.0" layoutY="45.0" prefHeight="31.0" prefWidth="325.0" promptText="Usuário">
+                  <TextField id="Usuário/textfield" fx:id="usuarioMed" accessibleText="Usuário" layoutX="43.0" layoutY="45.0" prefHeight="31.0" prefWidth="325.0" promptText="Usuário">
                      <font>
                         <Font name="Century Gothic" size="15.0" />
                      </font>
