--- a/doc/src/application/admincad.fxml
+++ b/doc/src/application/admincad.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #004AB3;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.TelaController">
+<Pane prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #004AB3;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.CadastroController">
    <children>
       <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0">
          <children>
@@ -27,8 +27,9 @@
                         <Font name="Century Gothic Bold" size="12.0" />
                      </font>
                   </Button>
-                  <TextField fx:id="CRM" layoutX="69.0" layoutY="53.0" prefHeight="40.0" prefWidth="300.0" promptText="CRM" style="-fx-background-radius: 24;" />
+                  <TextField fx:id="CRM" layoutX="69.0" layoutY="73.0" prefHeight="40.0" prefWidth="300.0" promptText="CRM" style="-fx-background-radius: 24;" />
                   <TextField fx:id="senha" layoutX="69.0" layoutY="120.0" prefHeight="40.0" prefWidth="300.0" promptText="CPF" style="-fx-background-radius: 24;" />
+                  <TextField fx:id="mednome" layoutX="69.0" layoutY="24.0" prefHeight="40.0" prefWidth="300.0" promptText="Nome" style="-fx-background-radius: 24;" />
                </children>
                <effect>
                   <DropShadow height="120.66" radius="34.915">
