--- a/doc/src/application/home.fxml
+++ b/doc/src/application/home.fxml
@@ -3,6 +3,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.effect.ImageInput?>
 <?import javafx.scene.image.Image?>
@@ -60,7 +61,7 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="138.0" layoutY="83.0" prefHeight="106.0" prefWidth="380.0" style="-fx-background-color: CCE0FF; -fx-background-radius: 24;">
+            <AnchorPane layoutX="156.0" layoutY="84.0" prefHeight="106.0" prefWidth="380.0" style="-fx-background-color: CCE0FF; -fx-background-radius: 24;">
                <children>
                   <ImageView fitHeight="98.0" fitWidth="128.0" layoutX="8.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -96,18 +97,16 @@
                   <Font name="Century Gothic Bold" size="24.0" />
                </font>
             </Text>
-            <AnchorPane layoutX="133.0" layoutY="220.0" prefHeight="143.0" prefWidth="86.0" style="-fx-background-color: CCE0FF; -fx-background-radius: 24;">
+            <AnchorPane layoutX="148.0" layoutY="224.0" prefHeight="143.0" prefWidth="395.0" style="-fx-background-color: CCE0FF; -fx-background-radius: 24;">
                <children>
-                  <Text fill="#0c408b" layoutX="17.0" layoutY="41.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Notas">
+                  <Text fill="#0c408b" layoutX="174.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Notas">
                      <font>
                         <Font name="Century Gothic Bold" size="18.0" />
                      </font>
                   </Text>
-                  <Text fill="#0c408b" layoutX="17.0" layoutY="68.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Veja aqui suas notas" textAlignment="CENTER" wrappingWidth="52.81591796875">
-                     <font>
-                        <Font name="Century Gothic" size="13.0" />
-                     </font>
-                  </Text>
+                  <TextArea layoutX="14.0" layoutY="34.0" prefHeight="96.0" prefWidth="106.0" style="-fx-background-color: CCE0FF;" />
+                  <TextArea layoutX="275.0" layoutY="34.0" prefHeight="96.0" prefWidth="106.0" style="-fx-background-color: CCE0FF;" />
+                  <TextArea layoutX="144.0" layoutY="34.0" prefHeight="96.0" prefWidth="106.0" style="-fx-background-color: CCE0FF;" />
                </children>
                <effect>
                   <DropShadow>
@@ -117,20 +116,6 @@
                   </DropShadow>
                </effect>
             </AnchorPane>
-            <Button layoutX="263.0" layoutY="277.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0" text="Button">
-               <effect>
-                  <ImageInput>
-                     <source>
-                        <Image url="file:/C:/Users/jaolo/git/repository2/doc/src/images/plusicon.png" />
-                     </source>
-                  </ImageInput>
-               </effect>
-            </Button>
-            <Text fill="#cce0ff" layoutX="238.0" layoutY="242.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Adicione uma nota" textAlignment="CENTER" wrappingWidth="99.83740234375">
-               <font>
-                  <Font name="Century Gothic Bold" size="16.0" />
-               </font>
-            </Text>
             <Pane fx:id="nomemedgrande" layoutX="578.0" layoutY="-9.0" prefHeight="608.0" prefWidth="241.0" style="-fx-background-color: CCE0FF;">
                <children>
                   <Text fill="#0c408b" layoutX="105.0" layoutY="367.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sérgio Montes" wrappingWidth="105.83740234375">
@@ -216,6 +201,15 @@
                   <DatePicker layoutX="229.0" layoutY="21.0" />
                </children>
             </AnchorPane>
+            <Button fx:id="btn" layoutX="338.0" layoutY="30.0" mnemonicParsing="false" onAction="#pacientebotao" text="Button">
+               <effect>
+                  <ImageInput>
+                     <source>
+                        <Image url="file:/C:/Users/jaolo/git/repository2/doc/src/images/addiconbutton.png" />
+                     </source>
+                  </ImageInput>
+               </effect>
+            </Button>
          </children>
       </AnchorPane>
    </children>
