--- a/doc/src/application/home.fxml
+++ b/doc/src/application/home.fxml
@@ -36,7 +36,7 @@
                         </ImageInput>
                      </effect>
                   </Button>
-                  <Button layoutX="16.0" layoutY="215.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="50.0">
+                  <Button layoutX="16.0" layoutY="215.0" mnemonicParsing="false" onAction="#notfbotao" prefHeight="50.0" prefWidth="50.0">
                      <effect>
                         <ImageInput>
                            <source>
@@ -61,7 +61,7 @@
                   </ImageView>
                </children>
             </AnchorPane>
-            <AnchorPane layoutX="156.0" layoutY="84.0" prefHeight="106.0" prefWidth="380.0" style="-fx-background-color: CCE0FF; -fx-background-radius: 24;">
+            <AnchorPane layoutX="152.0" layoutY="71.0" prefHeight="106.0" prefWidth="380.0" style="-fx-background-color: CCE0FF; -fx-background-radius: 24;">
                <children>
                   <ImageView fitHeight="98.0" fitWidth="128.0" layoutX="8.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -92,21 +92,21 @@
                   </DropShadow>
                </effect>
             </AnchorPane>
-            <Text fill="#cce0ff" layoutX="133.0" layoutY="56.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dashboard" wrappingWidth="135.08984375">
+            <Text fill="#cce0ff" layoutX="126.0" layoutY="51.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Dashboard" wrappingWidth="135.08984375">
                <font>
                   <Font name="Century Gothic Bold" size="24.0" />
                </font>
             </Text>
-            <AnchorPane layoutX="148.0" layoutY="224.0" prefHeight="143.0" prefWidth="395.0" style="-fx-background-color: CCE0FF; -fx-background-radius: 24;">
+            <AnchorPane layoutX="126.0" layoutY="207.0" prefHeight="143.0" prefWidth="432.0" style="-fx-background-color: CCE0FF; -fx-background-radius: 24;">
                <children>
-                  <Text fill="#0c408b" layoutX="174.0" layoutY="28.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Notas">
+                  <Text fill="#0c408b" layoutX="33.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Notas">
                      <font>
                         <Font name="Century Gothic Bold" size="18.0" />
                      </font>
                   </Text>
-                  <TextArea layoutX="14.0" layoutY="34.0" prefHeight="96.0" prefWidth="106.0" style="-fx-background-color: CCE0FF;" />
-                  <TextArea layoutX="275.0" layoutY="34.0" prefHeight="96.0" prefWidth="106.0" style="-fx-background-color: CCE0FF;" />
-                  <TextArea layoutX="144.0" layoutY="34.0" prefHeight="96.0" prefWidth="106.0" style="-fx-background-color: CCE0FF;" />
+                  <TextArea layoutX="33.0" layoutY="48.0" prefHeight="81.0" prefWidth="106.0" style="-fx-background-color: CCE0FF; -fx-border-radius: 24;" />
+                  <TextArea layoutX="294.0" layoutY="48.0" prefHeight="81.0" prefWidth="106.0" style="-fx-background-color: CCE0FF;" />
+                  <TextArea layoutX="163.0" layoutY="48.0" prefHeight="81.0" prefWidth="106.0" style="-fx-background-color: CCE0FF; -fx-border-radius: 24;" />
                </children>
                <effect>
                   <DropShadow>
@@ -118,6 +118,14 @@
             </AnchorPane>
             <Pane fx:id="nomemedgrande" layoutX="578.0" layoutY="-9.0" prefHeight="608.0" prefWidth="241.0" style="-fx-background-color: CCE0FF;">
                <children>
+                  <Pane layoutY="6.0" prefHeight="598.0" prefWidth="241.0">
+                     <children>
+                        <Label fx:id="nomegrande" layoutX="88.0" layoutY="214.0" text="Carla" textFill="#0c408b">
+                           <font>
+                              <Font name="Century Gothic" size="24.0" />
+                           </font>
+                        </Label>
+                     </children></Pane>
                   <Text fill="#0c408b" layoutX="105.0" layoutY="367.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sérgio Montes" wrappingWidth="105.83740234375">
                      <font>
                         <Font name="Century Gothic Bold" size="15.0" />
@@ -177,11 +185,6 @@
                         <Font name="Century Gothic" size="13.0" />
                      </font>
                   </Text>
-                  <Label fx:id="nomegrande" layoutX="92.0" layoutY="203.0" prefHeight="50.0" prefWidth="100.0" text="Carla" textFill="#0c408b">
-                     <font>
-                        <Font name="Century Gothic" size="24.0" />
-                     </font>
-                  </Label>
                </children>
             </Pane>
             <AnchorPane layoutX="126.0" layoutY="379.0" prefHeight="194.0" prefWidth="432.0" style="-fx-background-color: CCE0FF; -fx-background-radius: 24;">
