--- a/doc/src/application/addpaciente.fxml
+++ b/doc/src/application/addpaciente.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.DropShadow?>
@@ -46,7 +47,7 @@
                         <Font name="Century Gothic" size="12.0" />
                      </font>
                   </TextField>
-                  <TextArea fx:id="Hist" layoutX="51.0" layoutY="259.0" prefHeight="191.0" prefWidth="655.0" promptText="Justifique a Necessidade do Agendamento">
+                  <TextArea fx:id="Hist" layoutX="51.0" layoutY="259.0" prefHeight="191.0" prefWidth="655.0" promptText="Nota">
                      <font>
                         <Font name="Century Gothic" size="12.0" />
                      </font>
@@ -61,7 +62,7 @@
                         <Font name="Century Gothic" size="12.0" />
                      </font>
                   </TextField>
-                  <Button layoutX="509.0" layoutY="468.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="200.0">
+                  <Button layoutX="509.0" layoutY="468.0" mnemonicParsing="false" onAction="#CadPaciente" prefHeight="50.0" prefWidth="200.0">
                      <effect>
                         <ImageInput>
                            <source>
@@ -70,15 +71,7 @@
                         </ImageInput>
                      </effect>
                   </Button>
-                  <Button layoutX="27.0" layoutY="17.0" mnemonicParsing="false" onAction="#mudarhome" prefHeight="49.0" prefWidth="49.0" text="Button">
-                     <effect>
-                        <ImageInput>
-                           <source>
-                              <Image url="file:/C:/Users/jaolo/git/repository2/doc/src/backicon.png" />
-                           </source>
-                        </ImageInput>
-                     </effect>
-                  </Button>
+                  <Label fx:id="resposta" layoutX="68.0" layoutY="485.0" />
                </children>
             </AnchorPane>
          </children>
