--- a/doc/src/application/View/home.fxml
+++ b/doc/src/application/View/home.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.effect.DropShadow?>
@@ -88,7 +87,7 @@
                   <Font name="Century Gothic Bold" size="24.0" />
                </font>
             </Text>
-            <AnchorPane layoutX="126.0" layoutY="207.0" prefHeight="143.0" prefWidth="432.0" style="-fx-background-color: CCE0FF; -fx-background-radius: 24;">
+            <AnchorPane layoutX="126.0" layoutY="220.0" prefHeight="277.0" prefWidth="432.0" style="-fx-background-color: CCE0FF; -fx-background-radius: 24;">
                <children>
                   <Text fill="#0c408b" layoutX="33.0" layoutY="37.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Notas">
                      <font>
@@ -98,6 +97,9 @@
                   <TextArea layoutX="33.0" layoutY="48.0" prefHeight="81.0" prefWidth="106.0" style="-fx-background-color: CCE0FF; -fx-border-radius: 24;" />
                   <TextArea layoutX="294.0" layoutY="48.0" prefHeight="81.0" prefWidth="106.0" style="-fx-background-color: CCE0FF;" />
                   <TextArea layoutX="163.0" layoutY="48.0" prefHeight="81.0" prefWidth="106.0" style="-fx-background-color: CCE0FF; -fx-border-radius: 24;" />
+                  <TextArea layoutX="33.0" layoutY="164.0" prefHeight="81.0" prefWidth="106.0" style="-fx-background-color: CCE0FF; -fx-border-radius: 24;" />
+                  <TextArea layoutX="163.0" layoutY="164.0" prefHeight="81.0" prefWidth="106.0" style="-fx-background-color: CCE0FF; -fx-border-radius: 24;" />
+                  <TextArea layoutX="294.0" layoutY="164.0" prefHeight="81.0" prefWidth="106.0" style="-fx-background-color: CCE0FF; -fx-border-radius: 24;" />
                </children>
                <effect>
                   <DropShadow>
@@ -191,24 +193,7 @@
                   </Text>
                </children>
             </Pane>
-            <AnchorPane layoutX="126.0" layoutY="379.0" prefHeight="194.0" prefWidth="432.0" style="-fx-background-color: CCE0FF; -fx-background-radius: 24;">
-               <effect>
-                  <DropShadow>
-                     <color>
-                        <Color opacity="0.2862595319747925" />
-                     </color>
-                  </DropShadow>
-               </effect>
-               <children>
-                  <Text fill="#0c408b" layoutX="30.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Pacientes na data de:">
-                     <font>
-                        <Font name="Century Gothic Bold" size="18.0" />
-                     </font>
-                  </Text>
-                  <DatePicker layoutX="229.0" layoutY="21.0" />
-               </children>
-            </AnchorPane>
-            <Button fx:id="btn" layoutX="338.0" layoutY="30.0" mnemonicParsing="false" onAction="#pacientebotao" text="Button">
+            <Button fx:id="btn" layoutX="342.0" layoutY="29.0" mnemonicParsing="false" onAction="#pacientebotao" text="Button">
                <effect>
                   <ImageInput>
                      <source>
